test/semantic/bad/jeffrey-test-assignments.mC
int foo(){
return 111;
}

int main(){

int a;
int b;
int c;
int d;
a=b+d;
b=a-b;
c=a*b;
d=b/c;
a=a+6*2;
a=b*6+2;
a='c';
a=foo();
return 1;
}
